name:                rover
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable rover
  other-extensions:    DeriveDataTypeable, GADTs
  build-depends:       base >=4.7 && <4.8,
                       mtl,
                       operational,
                       SDL2,
                       stm
  default-language:    Haskell2010